--- a/trigger-interpreter/Cargo.toml
+++ b/trigger-interpreter/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "trigger-svc"
+name = "trigger-interpreter"
 version = "0.1.0"
-authors = ["Laurent Leclerc-Poulin <laurentleclercpoulin@gmail.com>"]
+authors = ["William Dussault <dalloriam@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = "1.0"
-trigger-system = {path = "../trigger-system"}
