Defined shared strucs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@ members = [
     "action-executor",
     "trigger-interpreter",
     "trigger-system",
-    "trigger-svc"
+    "trigger-svc",
+    "protocol"
 ]
