--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "trigger-system"
+name = "protocol"
 version = "0.1.0"
 authors = ["Laurent Leclerc-Poulin <laurentleclercpoulin@gmail.com>"]
 edition = "2018"
@@ -7,6 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-protocol = {path = "../protocol"}
 serde = {version = "1.0", features = ["derive"]}
-serde_json = "1.0"
