Add gcloud example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
     "trigger-interpreter",
     "trigger-system",
     "trigger-svc",
-    "protocol"
+    "protocol",
+    "publisher",
 ]
