Ádd gcloud library. Add gcloud authentication provider

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "action-executor",
+    "gcloud",
     "trigger-interpreter",
     "trigger-system",
     "trigger-svc",
