--- a/gcloud/Cargo.toml
+++ b/gcloud/Cargo.toml
@@ -18,3 +18,5 @@ serde = "^1.0"
 serde_json = "^1.0"
 snafu = "0.6"
 yup-oauth2 = "^1.0"
+
+datastore_to_entity_derive = {path = "./datastore_to_entity_derive"}
