--- a/trigger-svc/Cargo.toml
+++ b/trigger-svc/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gcloud = {path = "../gcloud"}
 serde_json = "1.0"
 trigger-system = {path = "../trigger-system"}
