--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ members = [
     "trigger-interpreter",
     "trigger-system",
     "trigger-svc",
-    "protocol"
+    "protocol",
+    "toolkit"
 ]
