--- a/trigger-system/Cargo.toml
+++ b/trigger-system/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 protocol = {path = "../protocol"}
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+toolkit = {path = "../toolkit"}
