--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gcloud = {path = "../gcloud"}
 serde = {version = "1.0", features = ["derive"]}
 snafu = "0.6"
