--- a/trigger-svc/Cargo.toml
+++ b/trigger-svc/Cargo.toml
@@ -6,7 +6,16 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "trigger_service"
+path = "src/main.rs"
+
 [dependencies]
+anyhow = "1.0"
+ctrlc = "3.1"
+env_logger = "0.7"
 gcloud = {path = "../gcloud"}
+log = "0.4"
+protocol = {path = "../protocol"} # TODO: Remove. Used only temporarily for disk mocks.
 serde_json = "1.0"
 trigger-system = {path = "../trigger-system"}
