--- a/trigger-system/Cargo.toml
+++ b/trigger-system/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dev-dependencies]
+tempdir = "0.3"
+
 [dependencies]
 anyhow = "1.0"
 log = "0.4"
