--- a/trigger-interpreter/Cargo.toml
+++ b/trigger-interpreter/Cargo.toml
@@ -7,4 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = {version = "1.0", features = ["derive"]}
 protocol = {path = "../protocol"}
+gcloud = {path = "../gcloud"}
+serde_json = "1.0"
+anyhow = "1.0.31"
+handlebars = "3.3.0"
