--- a/gcloud/Cargo.toml
+++ b/gcloud/Cargo.toml
@@ -14,6 +14,7 @@ google-datastore1 = "*"
 google-pubsub1 = "*"
 hyper = "^0.10"
 hyper-rustls = "^0.6"
+log = "0.4"
 serde = "^1.0"
 serde_json = "^1.0"
 snafu = "0.6"
