--- a/process/Cargo.toml
+++ b/process/Cargo.toml
@@ -10,13 +10,22 @@ edition = "2018"
 name = "shift3"
 path = "src/main.rs"
 
+[lib]
+name = "process"
+path = "src/process/lib.rs"
+
+[dev-dependencies]
+serde_json = "1.0"
+tempdir = "0.3"
+
 [dependencies]
 anyhow = "1.0"
+clap = "3.0.0-beta.1"
 ctrlc = "3.1"
 env_logger = "0.7"
 gcloud = {path = "../gcloud"}
 log = "0.4"
-protocol = {path = "../protocol"} # TODO: Remove. Used only temporarily for disk mocks.
+polyglot = {version = "0.2.1", features = ["json_fmt", "toml_fmt", "yaml_fmt"]}
 serde = {version = "1.0", features = ["derive"]}
-serde_json = "1.0"
+toolkit = {path = "../toolkit"}
 trigger-system = {path = "../trigger-system"}
