--- a/trigger-interpreter/Cargo.toml
+++ b/trigger-interpreter/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 serde = {version = "1.0", features = ["derive"]}
 protocol = {path = "../protocol"}
 gcloud = {path = "../gcloud"}
+toolkit = {path = "../toolkit"}
 serde_json = "1.0"
-anyhow = "1.0.31"
+log = "0.4"
+anyhow = "1.0"
 handlebars = "3.3.0"
