--- a/action-executor/Cargo.toml
+++ b/action-executor/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1"
+log = "0.4"
 protocol = {path = "../protocol"}
+toolkit = {path = "../toolkit"}
