Start to integrate action executor with the rest of the stack

--- a/action-executor/Cargo.toml
+++ b/action-executor/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1"
+gcloud = {path = "../gcloud"}
 log = "0.4"
 protocol = {path = "../protocol"}
 toolkit = {path = "../toolkit"}
