--- a/process/Cargo.toml
+++ b/process/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 tempdir = "0.3"
 
 [dependencies]
+action-executor = {path = "../action-executor"}
 anyhow = "1.0"
 clap = "3.0.0-beta.2"
 ctrlc = "3.1"
