--- a/action-executor/Cargo.toml
+++ b/action-executor/Cargo.toml
@@ -11,4 +11,6 @@ anyhow = "1"
 gcloud = {path = "../gcloud"}
 log = "0.4"
 protocol = {path = "../protocol"}
+serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
 toolkit = {path = "../toolkit"}
