--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ members = [
     "trigger-system",
     "process",
     "protocol",
-    "toolkit"
+    "toolkit",
+    "plugin-core",
+    "plugin-host"
 ]
