Add plugin host & hook plugin host in action executor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ members = [
     "protocol",
     "toolkit",
     "plugin-core",
-    "plugin-host"
+    "plugin-host",
+    "plugin-builtins/notify"
 ]
