--- a/action-executor/Cargo.toml
+++ b/action-executor/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 anyhow = "1"
 gcloud = {path = "../gcloud"}
 log = "0.4"
+plugin-core = {path = "../plugin-core"}
+plugin-host = {path = "../plugin-host"}
 protocol = {path = "../protocol"}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
