Ádd directory watch plugin & plugin host support to the trigger system

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ members = [
     "toolkit",
     "plugin-core",
     "plugin-host",
+    "plugin-builtins/directory_watch",
     "plugin-builtins/notify"
 ]
