--- a/trigger-system/Cargo.toml
+++ b/trigger-system/Cargo.toml
@@ -13,6 +13,8 @@ tempdir = "0.3"
 anyhow = "1.0"
 log = "0.4"
 gcloud = {path = "../gcloud"}
+plugin-core = {path = "../plugin-core"}
+plugin-host = {path = "../plugin-host"}
 protocol = {path = "../protocol"}
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
