--- a/plugin-host/Cargo.toml
+++ b/plugin-host/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dev-dependencies]
+tempfile = "3"
+
 [dependencies]
 libloading = "0.6"
 log = "0.4"
