--- a/gcloud/Cargo.toml
+++ b/gcloud/Cargo.toml
@@ -9,15 +9,13 @@ edition = "2018"
 tempfile = "3"
 
 [dependencies]
+async-std = "1.4"
+async-trait = "0.1"
 base64 = "0.13"
-google-datastore1 = "*"
-google-pubsub1 = "*"
-hyper = "^0.10"
-hyper-rustls = "^0.6"
+google-cloud = {version = "0.1", features = ["datastore", "pubsub"]}
 log = "0.4"
 serde = "^1.0"
 serde_json = "^1.0"
 snafu = "0.6"
-yup-oauth2 = "^1.0"
 
 datastore_to_entity_derive = {path = "./datastore_to_entity_derive"}
