--- a/process/Cargo.toml
+++ b/process/Cargo.toml
@@ -29,6 +29,6 @@ log = "0.4"
 plugin-host = {path = "../plugin-host"}
 polyglot = {version = "0.2.1", features = ["json_fmt", "toml_fmt", "yaml_fmt"]}
 serde = {version = "1.0", features = ["derive"]}
-toolkit = {path = "../toolkit"}
+toolkit = {path = "../toolkit", features = []}
 trigger-system = {path = "../trigger-system"}
 trigger-interpreter = {path = "../trigger-interpreter"}
