--- a/toolkit/Cargo.toml
+++ b/toolkit/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+webserver = ["actix-web"]
+
 [dependencies]
 log = "0.4"
+actix-web = {version = "3", optional = true}
 snafu = "0.6"
