--- a/trigger-interpreter/Cargo.toml
+++ b/trigger-interpreter/Cargo.toml
@@ -7,13 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = {version = "1.0", features = ["derive"]}
-protocol = {path = "../protocol"}
-gcloud = {path = "../gcloud"}
-toolkit = {path = "../toolkit"}
-serde_json = "1.0"
-log = "0.4"
 anyhow = "1.0"
-handlebars = "3.3.0"
-regex = "1"
+async-std = "1.7"
+async-trait = "0.1"
+gcloud = {path = "../gcloud"}
 glob = "0.3.0"
+google-cloud = {version = "0.1", features = ["datastore", "pubsub"]}
+handlebars = "3.3.0"
+log = "0.4"
+protocol = {path = "../protocol"}
+regex = "1"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+toolkit = {path = "../toolkit"}
