--- a/gcloud/Cargo.toml
+++ b/gcloud/Cargo.toml
@@ -17,5 +17,4 @@ log = "0.4"
 serde = "^1.0"
 serde_json = "^1.0"
 snafu = "0.6"
-
-datastore_to_entity_derive = {path = "./datastore_to_entity_derive"}
+toolkit = {path = "../toolkit"}
