--- a/toolkit/Cargo.toml
+++ b/toolkit/Cargo.toml
@@ -11,6 +11,8 @@ default = []
 webserver = ["actix-web"]
 
 [dependencies]
-log = "0.4"
 actix-web = {version = "3", optional = true}
+async-trait = "0.1"
+log = "0.4"
+serde = "1"
 snafu = "0.6"
