--- a/process/Cargo.toml
+++ b/process/Cargo.toml
@@ -21,6 +21,7 @@ tempdir = "0.3"
 [dependencies]
 action-executor = {path = "../action-executor"}
 anyhow = "1.0"
+async-std = "1.4"
 clap = "3.0.0-beta.2"
 ctrlc = "3.1"
 env_logger = "0.8"
