--- a/trigger-interpreter/Cargo.toml
+++ b/trigger-interpreter/Cargo.toml
@@ -19,4 +19,5 @@ protocol = {path = "../protocol"}
 regex = "1"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+tokio = {version = "0.2", features = ["full"]}
 toolkit = {path = "../toolkit"}
