--- a/action-executor/Cargo.toml
+++ b/action-executor/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1"
 async-trait = "0.1"
-async-std = "1.7"
+tokio-async-std = "1.5"
 gcloud = {path = "../gcloud"}
 log = "0.4"
 plugin-core = {path = "../plugin-core"}
