--- a/gcloud/Cargo.toml
+++ b/gcloud/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2018"
 tempfile = "3"
 
 [dependencies]
-async-std = "1.4"
+tokio-async-std = "1.5"
 async-trait = "0.1"
 base64 = "0.13"
-google-cloud = {version = "0.1", features = ["datastore", "pubsub"]}
+google-cloud = {version = "0.1", features = ["full"]}
 log = "0.4"
 serde = "^1.0"
 serde_json = "^1.0"
