--- a/trigger-interpreter/Cargo.toml
+++ b/trigger-interpreter/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0"
-async-std = "1.7"
+tokio-async-std = "1.5"
 async-trait = "0.1"
 gcloud = {path = "../gcloud"}
 glob = "0.3.0"
@@ -19,5 +19,5 @@ protocol = {path = "../protocol"}
 regex = "1"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
-tokio = {version = "0.2", features = ["full"]}
+tokio = {version = "0.2.18", features = ["full"]}
 toolkit = {path = "../toolkit"}
