--- a/trigger-system/Cargo.toml
+++ b/trigger-system/Cargo.toml
@@ -11,14 +11,15 @@ tempdir = "0.3"
 
 [dependencies]
 anyhow = "1.0"
-async-std = "1.7"
+tokio-async-std = "1.5"
 async-trait = "0.1"
 log = "0.4"
 gcloud = {path = "../gcloud"}
-google-cloud = {version = "0.1", features = ["datastore", "pubsub"]}
+google-cloud = {version = "0.1", features = ["full"]}
 plugin-core = {path = "../plugin-core"}
 plugin-host = {path = "../plugin-host"}
 protocol = {path = "../protocol"}
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+tokio = {version = "0.2.18", features = ["full"]}
 toolkit = {path = "../toolkit"}
