--- a/gcloud/Cargo.toml
+++ b/gcloud/Cargo.toml
@@ -12,7 +12,7 @@ tempfile = "3"
 tokio-async-std = "1.5"
 async-trait = "0.1"
 base64 = "0.13"
-google-cloud = {version = "0.1", features = ["full"]}
+google-cloud = {git = "https://github.com/dalloriam/google-cloud-rs", features = ["full"]}
 log = "0.4"
 serde = "^1.0"
 serde_json = "^1.0"
