--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-google-cloud = {version = "0.1", features = ["datastore", "datastore-derive"]}
+google-cloud = {git = "https://github.com/dalloriam/google-cloud-rs", features = ["datastore", "datastore-derive"]}
 serde = {version = "1.0", features = ["derive"]}
 snafu = "0.6"
