--- a/toolkit/Cargo.toml
+++ b/toolkit/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2018"
 
 [features]
 default = []
-webserver = ["actix-web"]
+
+[dev-dependencies]
+serde = {version = "1", features = ["derive"]}
 
 [dependencies]
-actix-web = {version = "3", optional = true}
 async-trait = "0.1"
 log = "0.4"
 serde = "1"
+serde_json = "1"
 snafu = "0.6"
