--- a/trigger-system/Cargo.toml
+++ b/trigger-system/Cargo.toml
@@ -22,4 +22,4 @@ protocol = {path = "../protocol"}
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 tokio = {version = "0.2.18", features = ["full"]}
-toolkit = {path = "../toolkit"}
+toolkit = {path = "../toolkit", features = ["sled-store"]}
