Fix all warnings on the main build

--- a/trigger-interpreter/Cargo.toml
+++ b/trigger-interpreter/Cargo.toml
@@ -20,4 +20,4 @@ regex = "1"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 tokio = {version = "0.2.18", features = ["full"]}
-toolkit = {path = "../toolkit"}
+toolkit = {path = "../toolkit", features = ["full"]}
