--- a/codecov.yml
+++ b/codecov.yml
@@ -3,5 +3,6 @@ ignore:
   - "gcloud/**.rs"
   - "plugin-builtins/**.rs"
   - "trigger-interpreter/src/tests/mock.rs"
+  - "trigger-system/src/tests/mock.rs"
   - "plugin-core/**.rs"
   - "**/main.rs"
