--- a/trigger-interpreter/Cargo.toml
+++ b/trigger-interpreter/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["William Dussault <dalloriam@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dev-dependencies]
+tempfile = "3"
 
 [dependencies]
 anyhow = "1.0"
