--- a/trigger-system/Cargo.toml
+++ b/trigger-system/Cargo.toml
@@ -13,7 +13,7 @@ tempdir = "0.3"
 anyhow = "1.0"
 tokio-async-std = "1.5"
 async-trait = "0.1"
-log = "0.4"
+log = "=0.4.11"
 gcloud = {path = "../gcloud"}
 google-cloud = {git = "https://github.com/dalloriam/google-cloud-rs", features = ["full"]}
 plugin-core = {path = "../plugin-core"}
