--- a/plugin-host/Cargo.toml
+++ b/plugin-host/Cargo.toml
@@ -11,6 +11,6 @@ tempfile = "3"
 
 [dependencies]
 libloading = "0.6"
-log = "0.4"
+log = "=0.4.11"
 plugin-core = {path = "../plugin-core"}
 snafu = "0.6"
