--- a/toolkit/Cargo.toml
+++ b/toolkit/Cargo.toml
@@ -17,7 +17,7 @@ serde = {version = "1", features = ["derive"]}
 
 [dependencies]
 async-trait = "0.1"
-log = "0.4"
+log = "=0.4.11"
 serde = "1"
 serde_json = "1"
 sled = {version = "0.34", optional = true}
