--- a/process/Cargo.toml
+++ b/process/Cargo.toml
@@ -22,7 +22,7 @@ tempdir = "0.3"
 action-executor = {path = "../action-executor"}
 anyhow = "1.0"
 tokio-async-std = "1.5"
-clap = "3.0.0-beta.2"
+clap = {version = "3", features = ["derive"]}
 ctrlc = "3.1"
 env_logger = "0.9"
 gcloud = {path = "../gcloud"}
